2017-10-10 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-828

	* src/m_fos.cc (iyHybrid2):
	Put derivative variable manipulation behind jacobian_do/j_analytical_do
	barriers. This as perturbation jacobian calcs will call the
	iy_main_agenda with jacobian_do flag, but unmodified jacobian_quantities
	settings (i.e. we can not rely on the contents or size of
	jacobian_quantities only).
	Should work now for all kinds of jacobian species.

	* src/rte.[cc,h] (get_stepwise_scattersky_propmat,
	get_stepwise_scattersky_source, get_stepwise_effective_source):
	Pass jacobian_do and put derivative manipulation behind barriers.

	* controlfiles/artscomponents/wfuns/TestWfunsHybCloudy.arts:
	Work in progress. Set back to use cheval data shipped with arts.

2017-10-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-827

	* src/rte.cc (get_stepwise_clearsky_propmat,
	get_stepwise_effective_source):
	Fixing issues that commit arts-2-3-823 brought up (its break of
	TestWfunsHybClear test case went unnoticed :-/) by further active
	initializations of variables and by replacing the not-applicable-anymore
	IsEmpty by an explicit check for analytical jacobians (the macro doesn't
	work here, though).

	* src/m_microphysics (pnd_fieldCalcFromParticleBulkProps):
	Fixed to allow pnds and dpnd_dx to be non-zero at the cloudbox limits
	when cloudbox limits at BOA and/or TOA. Fixes the issue of 0-tied
	Jacobians at BOA in iyHybrid2.

	* controlfiles/artscomponents/wfuns/TestWfunsHybCloudy.arts:
	Work in progress, testing further Jac species.

2017-10-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-826

	* src/methods.cc (define_md_data_raw): Extended doc for psdMgd.

2017-10-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-825

	* src/m_microphysics.cc (psdMgd): A general treatment of MGD for
	the case when the native paraneters are used (i.e. n0, mu, la and ga).

	(psdExpN0Lambda): Removed.
